--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 elasticsearch==7.15.2
 numpy==1.23.0
-pandas==1.1.5
+pandas~=1.4.3
 BeautifulSoup4==4.11.1
-requests==2.18.1
+requests~=2.28.1
+
+pytz~=2022.1
+PyYAML~=6.0
