--- a/main/config/config.yaml
+++ b/main/config/config.yaml
@@ -1,2 +1,5 @@
-#level.fyi url
+# basic csv path
 basic_path: 'C:/Users/ZZ01E1858/FindCustomerTW/main/db/'
+
+# basic crawler url
+basic_url: 'https://data.gcis.nat.gov.tw/od/datacategory'
